force-app/main/default/objects/HabitLog__c/HabitLog__c.object-meta.xml
<CustomObject>
    <description>日々の習慣実施状況を記録し、継続状況をカレンダーで確認するためのオブジェクト。</description>
    <label>習慣記録</label>
    <nameField>
        <displayFormat>HL-{00000}</displayFormat>
        <label>習慣記録番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>習慣記録</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>