force-app/main/default/objects/HabitLog__c/fields/HabitDate__c.field-meta.xml
<CustomField>
    <fullName>HabitDate__c</fullName>
    <description>習慣を実施または記録した日付を管理する。</description>
    <inlineHelpText>カレンダー上に表示する対象日を選択してください。</inlineHelpText>
    <label>記録日</label>
    <type>Date</type>
</CustomField>