force-app/main/default/objects/HabitLog__c/fields/HabitName__c.field-meta.xml
<CustomField>
    <fullName>HabitName__c</fullName>
    <description>利用者が継続したい習慣の名称を記録する。</description>
    <inlineHelpText>例: 朝の散歩、読書、英単語学習など、追跡したい習慣名を入力してください。</inlineHelpText>
    <label>習慣名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>