force-app/main/default/objects/HabitLog__c/fields/Habits__c.field-meta.xml
<CustomField>
    <fullName>Habits__c</fullName>
    <description>対象日に実施した習慣を複数選択で記録する。</description>
    <inlineHelpText>その日に実施した習慣を1つ以上選択してください。</inlineHelpText>
    <label>実施した習慣</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>筋トレ</fullName>
            </value>
            <value>
                <fullName>Speakでの英語学習</fullName>
            </value>
            <value>
                <fullName>読書</fullName>
            </value>
            <value>
                <fullName>Codexでの個人開発</fullName>
            </value>
            <value>
                <fullName>もとやまさんのnote</fullName>
            </value>
            <value>
                <fullName>トイレ掃除</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>