force-app/main/default/objects/HabitLog__c/fields/LogDate__c.field-meta.xml
<CustomField>
    <fullName>LogDate__c</fullName>
    <description>習慣記録の対象日を管理し、カレンダー上の日付と1対1で対応させる。</description>
    <inlineHelpText>この習慣記録を登録する日付です。同じ日付の記録は編集対象として扱われます。</inlineHelpText>
    <label>記録日</label>
    <type>Date</type>
</CustomField>