force-app/main/default/objects/HabitLog__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <description>対象日の習慣実施に関する補足、振り返り、次回に向けたメモを記録する。</description>
    <inlineHelpText>任意で、その日の振り返りや気づきを入力してください。</inlineHelpText>
    <label>メモ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>