force-app/main/default/objects/HabitLog__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>習慣実施時の気づき、障害、次回改善点を記録する。</description>
    <inlineHelpText>任意で、その日の振り返りや次に活かすメモを入力してください。</inlineHelpText>
    <label>メモ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>