force-app/main/default/objects/HabitLog__c/fields/StreakCount__c.field-meta.xml
<CustomField>
    <fullName>StreakCount__c</fullName>
    <description>対象記録時点の連続達成日数を保持し、継続状況の把握に利用する。</description>
    <inlineHelpText>必要に応じて、連続達成日数を数値で入力してください。</inlineHelpText>
    <label>連続達成日数</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>