force-app/main/default/objects/HabitLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LogDate__c</columns>
    <columns>Habits__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>